Fix overlap of notes

--- a/templates/admin/assets/styles/note.css
+++ b/templates/admin/assets/styles/note.css
@@ -32,7 +32,7 @@
 	font-size: 1.5em;
 	line-height: 1.5em;
 	padding: 0.5em;
-	white-space: pre;
+	white-space: pre-wrap;
 
 	&:before
 	{
