--- a/templates/default/assets/styles/note.css
+++ b/templates/default/assets/styles/note.css
@@ -33,7 +33,7 @@
 	font-size: 1.5em;
 	line-height: 1.5em;
 	padding: 0.5em;
-	white-space: pre;
+	white-space: pre-wrap;
 
 	&:before
 	{
